Verif/Test/Invalide/test_erreur_3.45-6.deca
// Description:
//    Programme soulevant l'erreur (3.45)
// Resultats:
//    Erreur contextuelle
//    Ligne 13 : Expression booléenne attendue (règle 3.45)
//
// Attributs: exec correct automatique
//
// Historique:
//    cree le 13/01/2012

{
   if(1.0) {
   }
}